--- a/style.css
+++ b/style.css
@@ -12,17 +12,18 @@
     {
         font-family: Raleway;
         font-size: 17px;
+        /*display: none;*/
     }
 
     /* Style the input fields */
-    select, input
+    select, input, textarea
     {
         padding: 10px;
         width: 100%;
         font-size: 17px;
         font-family: Raleway;
         border: 1px solid #aaaaaa;
-        box-sizing:border-box;
+        box-sizing: border-box;
     }
 
     /* Mark input boxes that gets an error on validation: */
