--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@
         padding: 10px;
         border-radius: 6px;
         font-family: Raleway;
-        font-size: 20px;
+        font-size: 15px;
 
         /* Position the tooltip text */
         position: absolute;
@@ -128,4 +128,9 @@
     {
         visibility: visible;
         opacity: 1;
+    }
+
+    td.narrow
+    {
+        width: 130px;
     }
